# bazel-example

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  env.sh  maven_install.json
main/java/com/example/: Application.java  Calculator.java
test/java/com/example/: CalculatorTest.java  HttpClientTest.java  LoggingTest.java
