module(
    name = "bazel-example",
    version = "0.1",
)

bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "commons-codec:commons-codec:jar:1.21.0",
        "javax.xml.bind:jaxb-api:2.3.1",
        "ch.qos.reload4j:reload4j:1.2.26",
        "org.slf4j:jcl-over-slf4j:1.7.36",
        "org.slf4j:log4j-over-slf4j:1.7.36",
        "org.slf4j:slf4j-api:1.7.36",
        "org.slf4j:slf4j-jdk14:1.7.36",
        "org.slf4j:slf4j-simple:1.7.36",
    ],
    duplicate_version_warning = "error",
    # NOTE anytime you update artifacts or repositories, you need to run `REPIN=1 bazel run @maven//:pin` to regenerate maven_install.json
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
maven.artifact(
    artifact = "httpclient",
    group = "org.apache.httpcomponents",
    version = "4.5.14",
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
maven.artifact(
    testonly = True,
    artifact = "hamcrest",
    group = "org.hamcrest",
    version = "3.0",
)
maven.artifact(
    testonly = True,
    artifact = "hamcrest-core",
    group = "org.hamcrest",
    version = "3.0",
)
maven.artifact(
    testonly = True,
    artifact = "hamcrest-library",
    group = "org.hamcrest",
    version = "3.0",
)
maven.override(
    coordinates = "commons-logging:commons-logging",
    target = "@maven//:org_slf4j_jcl_over_slf4j",
)
maven.override(
    coordinates = "ch.qos.reload4j:reload4j",
    target = "@maven//:org_slf4j_log4j_over_slf4j",
)
maven.override(
    coordinates = "org.hamcrest:hamcrest-core",
    target = "@maven//:org_hamcrest_hamcrest",
)
use_repo(maven, "maven")
